# scanner-gui

./: .gitmodules  DockerFile  README.md
UntitledProject/: UntitledProject.qmlproject  UntitledProject.qmlproject.qtds  qmlmodules
UntitledProject/content/: App.qml  Bootpage.qml  CMakeLists.txt  IndicatorLED.qml  Mainui.qml  SettingsInit.qml  SettingsUI.qml  StackViewPage.qml  StackViewSettings.qml
UntitledProject/imports/UntitledProject/: Constants.qml
build-gui-Desktop_Qt_6_3_1-Debug/: CMakeCache.txt  qtcsettings.cmake
cad_models/: 12-12-1.6-80.bak  12-12-1.6-80.bak.dwg  12-12-1.6-80.bak.dwl  12-12-1.6-80.bak.dwl2  12-12-1.6-80.dwg  5-5-1-80_angle.bak  5-5-1-80_angle.dwg  assembly.bak  assembly.bak.dwg  assembly.bak.dwl  assembly.bak.dwl2  assembly.dwg  base_plate.bak  base_plate.dwg  c_section.bak  c_section.bak.dwg  c_section.bak.dwl  c_section.bak.dwl2  c_section.dwg  hinge.bak  hinge.dwg  monitor_back_support.bak  monitor_back_support.dwg  plate.bak  plate.dwg
devel/: .rosinstall  local_setup.sh  setup.sh
devel/lib/pkgconfig/: scanner-gui.pc
devel/share/scanner-gui/cmake/: scanner-guiConfig.cmake
gui/: CMakeLists.txt  CMakeLists.txt.qtds  gui.qmlproject  gui.qmlproject.qtds  gui.qmlproject.user.30e7153  main.cpp
gui/content/: Bootpage.qml  CMakeLists.txt  Mainui.qml  SettingsInit.qml  SettingsUI.qml  StackViewPage.qml
gui/include/: logterminal.h  mainwindow.h  myviz.h  opencvimageprovider.h  roshandler.h  touchpad.h  videostreamer.h
gui/launch/: gui.launch
gui/scanner-gui/: App.qml  Bootpage.qml  IndicatorLED.qml  Mainui.qml  Resource.qrc  Settings.qml  SettingsAbout.qml  SettingsCamera.qml  SettingsGeneral.qml  SettingsIMU.qml  SettingsInit.qml  SettingsInit.qml.autosave  SettingsLiDAR.qml  SettingsUI.qml  SettingsUI.qml.autosave  StackViewPage.qml  StackViewSettings.qml
gui/src/: logterminal.cpp  main.cpp  mainwindow.cpp  myviz.cpp  opencvimageprovider.cpp  roshandler.cpp  touchpad.cpp  videostreamer.cpp
gui_ws/: gui.workspace.user.30e7153
gui_ws/.qtc_clangd/: compile_commands.json
gui_ws/.qtc_clangd/.cache/clangd/index/: 32.h.3E67387E843624F7.idx  64.h.1B2DCA20315B99F7.idx  Actor.hh.89B58392491F4F7F.idx  Actor.hh.9DB6540776E7EF86.idx  AdiabaticAtmosphere.hh.CFCC0C47592B1A89.idx  AdvertiseOptions.hh.F9F9848B1730FB40.idx  AirPressure.hh.C49E816719CCD8A0.idx  Altimeter.hh.E7C1233EEC25C230.idx  Angle.hh.5135DB1A8CD8CFED.idx  Animation.hh.829B27F395CCED31.idx  App_qml.cpp.2EFA1BE611B9E8B9.idx  App_qml.cpp.AD20AB1AE0EC4A32.idx  Assert.hh.920A0FA5C88586B1.idx  (+2758 more)
gui_ws/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
gui_ws/devel/include/ros_srv/: ImuSwitch.h  ImuSwitchRequest.h  ImuSwitchResponse.h  VelodyneSwitch.h  VelodyneSwitchRequest.h  VelodyneSwitchResponse.h
gui_ws/devel/lib/arbie_teleop/: gamepad
gui_ws/devel/lib/gui/: scanner-gui  scanner_gui
gui_ws/devel/lib/librviz_tutorial/: myviz
gui_ws/devel/lib/pkgconfig/: arbie_bringup.pc  arbie_description.pc  arbie_gazebo.pc  arbie_slam.pc  arbie_teleop.pc  gui.pc  librviz_tutorial.pc  ros_srv.pc  scanner-gui.pc  velodyne_control.pc  velodyne_description.pc  velodyne_gazebo_plugins.pc
gui_ws/devel/lib/scanner-gui/: qt-gui  qt_gui
gui_ws/devel/lib/velodyne_control/: velodyne_teleop
gui_ws/devel/lib/velodyne_description/: hardware_signal  velodyne_description  velodyne_interface
gui_ws/log/: latest
gui_ws/pwd/log/: latest
gui_ws/pwd/pwd/log/: latest
gui_ws/src/gui/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  myviz.cpp  package.xml  roshandler.cpp  roshandler.h
gui_ws/src/gui/include/: mainwindow.h  opencvimageprovider.h  videostreamer.h
gui_ws/src/gui/launch/: scanner_gui.launch
gui_ws/src/gui/scanner-gui/: App.qml  Bootpage.qml  IndicatorLED.qml  Mainui.qml  Resource.qrc  SettingsUI.qml  StackViewPage.qml  StackViewSettings.qml
gui_ws/src/gui/src/: main.cpp  mainwindow.cpp  videostreamer.cpp
gui_ws/src/librviz_tutorial/: CMakeLists.txt
gui_ws/src/ros_srv/: CMakeLists.txt
gui_ws/src/velodyne_control/nodes/: velodyne_teleop
gui_ws/src/velodyne_description/: CMakeLists.txt
gui_ws/src/velodyne_description/include/: hardwareswitch.h
gui_ws/src/velodyne_description/launch/: example.launch  hardware_interface.launch  robot_simulation.launch  simulation.launch
gui_ws/src/velodyne_description/src/: hardwareswitch.cpp  main.cpp
gui_ws/src/velodyne_description/urdf/: imu.urdf.xacro  robot_simulation.urdf.xacro
librviz_tutorial/src/: myviz.cpp  myviz.h
qt_gui/include/: logterminal.h  opencvimageprovider.h
qt_gui/include/myviz/: myviz.hpp
qt_gui/scanner-gui/: Bootpage.qml  Mainui.qml  Resource.qrc  Settings.qml  SettingsAbout.qml  SettingsCamera.qml  SettingsLiDAR.qml  StackViewPage.qml
qt_gui/src/: main.cpp  myviz.cpp  roshandler.cpp  touchpad.cpp  videostreamer.cpp
ros_srv/: CMakeLists.txt  package.xml
ros_srv/srv/: CameraExposure.srv
rviz_embed_test/: CMakeLists.txt  package.xml
rviz_embed_test/include/: animatedgridlayout.h  roshandler.h  roundedbutton.h  touchpad.h  videostreamer.h
rviz_embed_test/include/myviz/: myviz.hpp
rviz_embed_test/scanner-gui/: App.qml  IndicatorLED.qml  Mainui.qml  SettingsInit.qml
rviz_embed_test/src/: animatedgridlayout.cpp  main.cpp  myviz.cpp  opencvimageprovider.cpp  roshandler.cpp  roundedbutton.cpp  touchpad.cpp  videostreamer.cpp
velodyne/velodyne_description/launch/: example.launch.py
velodyne_control/: CMakeLists.txt  package.xml
velodyne_control/launch/: velodyne_teleop.launch
velodyne_description/include/: roslaunchmanager.h
velodyne_description/launch/: hardware_interface.launch  simulation.launch
velodyne_description/rviz/: example.rviz
velodyne_description/src/: main.cpp
velodyne_description/urdf/: robot_simulation.urdf.xacro
vision_opencv/cv_bridge_ros2/: package.xml
vision_opencv/cv_bridge_ros2/include/cv_bridge_ros2/: rgb_colors.h
vision_opencv_ros2/cv_bridge_ros2/: CMakeLists.txt
vision_opencv_ros2/cv_bridge_ros2/include/cv_bridge_ros2/: cv_bridge.h
vision_opencv_ros2/cv_bridge_ros2/src/: cv_bridge.cpp  module.hpp  rgb_colors.cpp
(+30 files in other folders)
