<?xml version="1.0"?>
<package format="2">
  <name>ros_srv</name>
  <version>0.0.0</version>
  <description> ros services</description>
  <maintainer email="yamada@todo.todo">zach</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

</package>
