<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_embed_test</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="michael.jeronimo@openrobotics.org">michael</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
   <build_depend>qt5-qmake</build_depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rviz_common</depend>
  <depend>rviz_default_plugins</depend>
  <depend>rviz_ogre_vendor</depend>
  <depend>rviz_rendering</depend>
  <depend>ros_srv</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cv_bridge_ros2</depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-quick</exec_depend>
  <exec_depend>libqt5-qml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
